# LMS

./: .dockerignore  .gitignore  AUTHENTICATION_IMPLEMENTATION_VERIFIED.md  CHATBOT_AUTHENTICATION.md  CHATBOT_AUTH_IMPLEMENTATION_COMPLETE.md  CHATBOT_AUTH_QUICK_REFERENCE.md  CHATBOT_FEATURE.md  CHATBOT_FIXES.md  CHATBOT_IMPLEMENTATION_REPORT.md  CHATBOT_QUICK_START.md  DATABASE_CHANGES_INDEX.md  DATABASE_CHANGES_SUMMARY.md  DATABASE_CONNECTION_FIX.md  DATABASE_FIX_COMPLETE.md  DATABASE_FIX_EXECUTIVE_SUMMARY.md  DATABASE_FIX_IMPLEMENTATION.md  DATABASE_VERIFICATION_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DISCUSSIONS_FIX_SUMMARY.md  Dockerfile  FIXES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTOR_REFACTORING_IMPLEMENTATION.md  LESSON_CREATION_FIX_SUMMARY.md  LIVE_CLASSES_API_REFERENCE.md  LIVE_CLASSES_IMPLEMENTATION.md  LMS_ORGANIZATION_ADMIN_OVERVIEW.md  QUICK_START_DATABASE_FIX.md  README.md  SUPPORT_FEEDBACK_IMPLEMENTATION.md  VIDEO_LESSON_SYSTEM_GUIDE.md  create_levels.py  nixpacks.toml  package.json  railway.json  render.yaml  run-backend.ps1
backend/: .env.example  __init__.py  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh  test_calendar.py  test_import.py  tmp_test_routes.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  whisper_service.py
backend/app/core/: __init__.py  security.py
backend/app/middleware/: __init__.py  (+2 more)
backend/tests/: conftest.py  test_assignments.py  test_courses.py  test_dashboard.py  test_file_storage.py  test_gamification.py  test_lesson_content.py  test_live_sessions.py  test_quizzes.py
(+243 files in other folders)
